--- a/index.html
+++ b/index.html
@@ -3,11 +3,145 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel ="stylesheet" href="styles/normalize.css">
+  <link rel="stylesheet" href="styles/style.css">
   <title>Научиться учиться</title>
 </head>
 <body>
   <div class="page">
-
+    <header class="header">
+      <img src="images/logo_place_header.svg" class="logo logo_place_header" alt="Лого">
+      <h1 class="header-title">Научиться учиться</h1>
+      <h4 class="header-subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?<a class="header-link" href="#"> Узнать →</a></h4>
+      <img class="header-main-illustration" src="images/header-image.png" alt="Фоновая картика">
+      <div class="header__square-pic">
+      </div>
+    </header>
+    <main class="main">
+      <section class="description">
+        <div class="two-columns">
+          <h4 class="two-columns_brief">Главные проблемы в обучении</h4>
+          <div class="two-columns_main-text">
+            <p class="two-columns_paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
+            <p class="two-columns_paragraph_centre"><span class="paragraph_span">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
+            <p class="two-columns_paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
+          </div>
+        </div>
+      </section>
+      <section class="digits">
+          <h2 class="section-title">Цифры и факты</h2>
+          <h3 class="section-subtitle">Про учебу и мозг</h3>
+        <div class="table">
+          <div class="cell">
+            <h5 class="cell_heading">86 миллиардов</h5>
+            <p class="cell_text">Число нейронов в мозге человека</p>
+          </div>
+          <div class="cell">
+            <h5 class="cell_heading">2.1 миллиарда</h5>
+            <p class="cell_text">Число нуждающихся в повышении квалификации</p>
+            <p class="cell_text no-botton-margin">Всемирный Банк, 2017</p>
+          </div>
+           <div class="cell">
+            <h5 class="cell_heading">1000 терабайт</h5>
+            <p class="cell_text">Объём памяти человека</p>
+          </div>
+           <div class="cell">
+            <h5 class="cell_heading">500 триллионов</h5>
+            <p class="cell_text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
+          </div>
+           <div class="cell">
+            <h5 class="cell_heading">420 миллионов</h5>
+            <p class="cell_text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
+            <p class="cell_text no-botton-margin">Всемирный Банк, 2017</p>
+          </div>
+           <div class="cell">
+            <h5 class="cell_heading">17–20 лет</h5>
+            <p class="cell_text">Пик обучаемости</p>
+          </div>
+           <div class="cell">
+            <h5 class="cell_heading">1885 год</h5>
+            <p class="cell_text">Открытие кривой забывания</p>
+          </div>
+           <div class="cell">
+            <h5 class="cell_heading">1889 год</h5>
+            <p class="cell_text">Открытие условного рефлекса</p>
+          </div>
+        </div>
+      </section>
+      <section class="feynman">
+        <h2 class="feynman-title">Метод Фейнмана</h2>
+        <h3 class="feynman-subtitle">Выучить и не забыть.</h3>
+        <a href="#" class="feynman-link">Подробнее →</a>
+        <img src="images/feynman.png" class="feynman-img" alt="Фотография Фейнмана">
+      </section>
+      <section class="kaufman">
+        <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
+        <h3 class="section-subtitle section-subtitle_theme_dark">От Джуша Кауфмана</h3>
+        <img src="images/kaufman-triangle.svg" alt="Труегольник" class="triangle">
+        <div class="table">
+          <div class="cell cell_theme_dark">
+            <h5 class="cell_heading cell_heading_theme_dark">1</h5>
+            <p class="cell_text cell_text_theme_dark">Выберите привлекательный проект.</p>
+          </div>
+          <div class="cell cell_theme_dark">
+            <h5 class="cell_heading cell_heading_theme_dark">2</h5>
+            <p class="cell_text cell_text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
+          </div>
+           <div class="cell cell_theme_dark">
+            <h5 class="cell_heading cell_heading_theme_dark">3</h5>
+            <p class="cell_text cell_text_theme_dark">Определите целевой уровень мастерства.</p>
+          </div>
+           <div class="cell cell_theme_dark">
+            <h5 class="cell_heading cell_heading_theme_dark">4</h5>
+            <p class="cell_text cell_text_theme_dark">Разбейте навык на элементы.</p>
+          </div>
+           <div class="cell cell_theme_dark">
+            <h5 class="cell_heading cell_heading_theme_dark">5</h5>
+            <p class="cell_text cell_text_theme_dark">Приготовьте всё необходимое для занятий.</p>
+          </div>
+           <div class="cell cell_theme_dark">
+            <h5 class="cell_heading cell_heading_theme_dark">6</h5>
+            <p class="cell_text cell_text_theme_dark">Устраните препятствия для занятий.</p>
+          </div>
+           <div class="cell cell_theme_dark">
+            <h5 class="cell_heading cell_heading_theme_dark">7</h5>
+            <p class="cell_text cell_text_theme_dark">Выделите специальное время для занятий.</p>
+          </div>
+           <div class="cell cell_theme_dark">
+            <h5 class="cell_heading cell_heading_theme_dark">8</h5>
+            <p class="cell_text cell_text_theme_dark">Создайте быстрые петли обратной связи.</p>
+          </div>
+          <div class="cell cell_theme_dark">
+            <h5 class="cell_heading cell_heading_theme_dark">9</h5>
+            <p class="cell_text cell_text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+          </div>
+          <div class="cell cell_theme_dark">
+            <h5 class="cell_heading cell_heading_theme_dark">10</h5>
+            <p class="cell_text cell_text_theme_dark">Уделяйте внимание количеству и скорости.</p>
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer class="footer">
+      <div class="footer-columns">
+        <div class="footer-column_content_copyright">
+          <img src="images/logo_place_footer.svg" alt="Лого" class="logo logo_place_fooret">
+          <p class="footer-author">&copy; Андрей Шапка</p>
+        </div> 
+        <div class="footer-column_content_info">
+          <h6 class="footer-column-heading">О Практикуме</h6>
+          <a href="#" class="footer-column-links">Главная</a>
+          <a href="#" class="footer-column-links">Концепция</a>
+          <a href="#" class="footer-column-links">Наставники</a>
+        </div>
+        <div class="footer-column_content_social">
+          <h6 class="footer-column-heading">Соцсети</h6>
+          <a href="#" class="footer-column-links"><img src="images/facebook_color_white.svg" alt="иконка" class="footer-social-icon">Facebook</a>
+          <a href="#" class="footer-column-links"><img src="images/vk_color_white.svg" alt="иконка" class="footer-social-icon">Вконтакте</a>
+          <a href="#" class="footer-column-links"><img src="images/instagram_color_white.svg" alt="иконка" class="footer-social-icon">Instagram</a>
+        </div>
+      </div>
+    </footer>
   </div>
 </body>
 </html>
