--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         </div>
       </section>
       <section class="digits">
-          <h2 class="section__title">Цифры и факты</h2>
-          <p class="section__subtitle">Про учебу и мозг</p>
+          <h2 class="section-title">Цифры и факты</h2>
+          <p class="section-subtitle">Про учебу и мозг</p>
         <div class="table">
           <div class="table__cell">
             <h3 class="table__heading">86 миллиардов</h3>
@@ -75,8 +75,8 @@
         <img src="images/feynman.png" class="feynman__img" alt="Фотография Фейнмана">
       </section>
       <section class="kaufman">
-        <h2 class="section__title section__title_theme_dark">Принципы обучения</h2>
-        <p class="section__subtitle section__subtitle_theme_dark">От Джуша Кауфмана</p>
+        <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
+        <p class="section-subtitle section-subtitle_theme_dark">От Джуша Кауфмана</p>
         <div class="kaufman__triangle"></div>
         <div class="table">
           <div class="table__cell table__cell_theme_dark">
@@ -124,11 +124,11 @@
     </main>
     <footer class="footer">
       <div class="footer__columns">
-        <div class="footer__column_content_copyright">
+        <div class="footer__column footer__column_content_copyright">
           <img src="images/logo_place_footer.svg" alt="Лого" class="logo logo_place_footer">
           <p class="footer__author">&copy; Андрей Шапка</p>
         </div> 
-        <nav class="footer__column_content_info">
+        <nav class="footer__column footer__column_content_info">
           <h4 class="footer__column-heading">О Практикуме</h4>
           <ul class="footer__column-links">
             <li><a href="#" class="footer__column-link">Главная</a></li>
@@ -136,12 +136,12 @@
             <li><a href="#" class="footer__column-link">Наставники</a></li>
           </ul>
         </nav>
-        <nav class="footer__column_content_social">
+        <nav class="footer__column footer__column_content_social">
           <h4 class="footer__column-heading">Соцсети</h4>
           <ul class="footer__column-links">
-            <li><a href="#" class="footer__column-link"><img src="images/facebook_color_white.svg" alt="иконка" class="footer__social-icon">Facebook</a></li>
-            <li><a href="#" class="footer__column-link"><img src="images/vk_color_white.svg" alt="иконка" class="footer__social-icon">Вконтакте</a></li>
-            <li><a href="#" class="footer__column-link"><img src="images/instagram_color_white.svg" alt="иконка" class="footer__social-icon">Instagram</a></li>
+            <li><a href="#" class="footer__column-link"><img src="images/facebook_color_white.svg" alt="Логотип Facebook" class="footer__social-icon">Facebook</a></li>
+            <li><a href="#" class="footer__column-link"><img src="images/vk_color_white.svg" alt="Логотип ВКонтакте" class="footer__social-icon">ВКонтакте</a></li>
+            <li><a href="#" class="footer__column-link"><img src="images/instagram_color_white.svg" alt="Логотип Instagram" class="footer__social-icon">Instagram</a></li>
           </ul>
         </nav>
       </div>
